# Weekly-1-Game-Of-Life

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  primitives.cpp  primitives.h
